--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-flake8==6.0.0
-iniconfig==2.0.0
-mccabe==0.7.0
-packaging==23.1
-pluggy==1.0.0
+flake8
+iniconfig
+mccabe
+packaging
+pluggy
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pytest==7.3.1
