--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,18 @@ jobs:
         with:
           python-version: "3.11"
       - name: Install Dependencies
-        run: make install
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          make install
       - name: Check format
         run: make format-check
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        pythonversion: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        pythonversion: ["3.8", "3.9", "3.10", "3.11"]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
