--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-flake8
-iniconfig
-mccabe
-packaging
-pluggy
-pycodestyle
-pyflakes
-pytest
+click==8.1.3
+flake8==6.0.0
+iniconfig==2.0.0
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.1
+platformdirs==3.5.1
+pluggy==1.0.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
+pytest==7.3.1
