--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,12 @@ jobs:
           ruff --format=github --select=E9,F63,F7,F82 --target-version=py37 .
           # default set of ruff rules with GitHub Annotations
           ruff --format=github --target-version=py37 .
-      - name: Check format
-        run: make format-check
-      - name: Make Install
-        run: |
-          make install 
-          make format-check
+      # - name: Check format
+      #   run: make format-check
+      # - name: Make Install
+      #   run: |
+      #     make install
+      #     #make format-check
   test:
     runs-on: ubuntu-latest
     strategy:
