--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-black==23.3.0
-click==8.1.3
-exceptiongroup==1.1.1
-iniconfig==2.0.0
-mypy-extensions==1.0.0
-packaging==23.1
-pathspec==0.11.1
-platformdirs==3.5.1
-pluggy==1.0.0
-pytest==7.3.1
-tomli==2.0.1
+black
+click
+exceptiongroup
+iniconfig
+mypy-extensions
+packaging
+pathspec
+platformdirs
+pluggy
+pytest
+tomli
+ruff
