--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff pytest
+          pip install ruff pytest isort
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: sort imports with isort
+        run: |
+          isort .
       - name: Lint with ruff
         run: |
           ruff . --fix
