--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff pytest isort
+          pip install ruff pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: isort check
-        run: |
-          isort --check --diff .
       - name: Lint check with ruff
         run: |
           ruff check . -q
