--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,27 @@ show-fixes = true
 
 # Assume Python 3.11.
 target-version = "py311"
+[tool.poetry]
+name = "pystarter"
+version = "2.0.0"
+description = "Python Starter Project Boilerplate Template"
+authors = ["Aaron Saikovski <asaikovski@outlook.com>"]
+license = "MIT"
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.11"
+
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+black = "^23.3.0"
+ruff = "^0.0.275"
+bandit = "^1.7.5"
+safety = "^2.3.5"
+mypy = "^1.4.1"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
