--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install poetry
         run: |
+          pip install --upgrade pip
           python -m pip install poetry==1.5.1
       - name: Configure poetry
         run: |
