--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
   "python.formatting.provider": "none",
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": false,
-  "python.analysis.extraPaths": ["."],
+  "python.analysis.extraPaths": [".", "./src/sample_package/internal"],
   "files.exclude": {
     "**/.git": true
   }
