--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,35 @@
-[tool.poetry]
+[project]
 name = "pystarter"
 version = "0.1.0"
-description = "a sample python project"
-authors = ["A User <auser@someorg.com>"]
-license = "MIT"
+description = "Add your description here"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = ">=3.12,<3.14"
-
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.3"
-pytest-cov = "^6.0.0"
-black = "^24.10.0"
-ruff = "^0.7.3"
-bandit = "^1.7.10"
-pyinstaller = "^6.11.1"
+authors = [
+    { name = "aaronsaikovski", email = "asaikovski@outlook.com" }
+]
+requires-python = ">=3.13"
+dependencies = [
+    "bandit>=1.8.0",
+    "black>=24.10.0",
+    "isort>=5.13.2",
+    "pyinstaller>=6.11.1",
+    "pytest>=8.3.4",
+    "pytest-cov>=6.0.0",
+    "ruff>=0.8.4",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+
+[tool.setuptools]
+packages = ["pystarter"]
+package-dir = {"" = "src"}
+include-package-data = true
+
+
+[project.scripts]
+pystarter = "pystarter:main"
+
+
+
