--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -81,12 +81,14 @@ tasks:
   clean:
     desc: "Cleans the environment, Overwrites the pyproject.toml file"
     cmds:
-      - cmd /c "rmdir /s /q .venv"
-      - cmd /c "rmdir /s /q .ruff_cache"
-      - cmd /c "rmdir /s /q .pytest_cache"
-      - cmd /c "del /q .python-version"
-      - cmd /c "del /q uv.lock"
-      - cmd /c "del /q pyproject.toml"
+        - cmd /c "rmdir /s /q .venv || exit 0"
+        - cmd /c "rmdir /s /q dist || exit 0"
+        - cmd /c "rmdir /s /q .ruff_cache || exit 0"
+        - cmd /c "rmdir /s /q .pytest_cache || exit 0"
+        - cmd /c "del /q .python-version || exit 0"
+        - cmd /c "del /q uv.lock || exit 0"
+        - cmd /c "del /q pyproject.toml || exit 0"
+
 
 
   #############################################################################
