--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -48,6 +48,8 @@ tasks:
       - task deps
       - task activate
       - cmd /c "type pyproject_base.toml >> pyproject.toml || exit 0"
+      - cmd /c "del /q hello.py || exit 0"
+      - cmd /c "del /q main.py || exit 0"
 
   ###########################################################################
 
@@ -56,7 +58,8 @@ tasks:
     desc: "Install the dependencies."
     deps: [activate]
     cmds:
-      - uv add pytest pytest-cov isort black ruff bandit mypy colorama python-dotenv
+      - uv add pytest isort ruff bandit mypy python-dotenv aiofiles types-aiofiles
+      - uv add nest_asyncio structlog pydantic
       - uv tool upgrade --all
 
   ###########################################################################
@@ -83,9 +86,11 @@ tasks:
     desc: "Cleans the environment, Overwrites the pyproject.toml file"
     cmds:
       - cmd /c "rmdir /s /q .venv || exit 0"
+      - cmd /c "rmdir /s /q .mypy_cache || exit 0"
       - cmd /c "rmdir /s /q dist || exit 0"
       - cmd /c "rmdir /s /q .ruff_cache || exit 0"
       - cmd /c "rmdir /s /q .pytest_cache || exit 0"
+      - powershell -Command "Get-ChildItem -Path . -Filter '__pycache__' -Recurse -Directory | Remove-Item -Recurse -Force"
       - cmd /c "del /q .python-version || exit 0"
       - cmd /c "del /q uv.lock || exit 0"
       - cmd /c "del /q pyproject.toml || exit 0"
@@ -116,9 +121,9 @@ tasks:
     deps: [activate]
     cmds:
       - uv tool run isort .
-      #- uv tool run black .
       - uv tool run ruff check . --fix
-      - uv tool run mypy --check-untyped-defs .
+      - uv tool run ruff format .
+      - uv tool run mypy --check-untyped-defs --ignore-missing-imports .
 
   ###########################################################################
 
@@ -137,6 +142,16 @@ tasks:
     cmds:
       - uv tool run pyinstaller main.py
 
+  ###########################################################################
+
+  ## reqs - Lock dependencies declared in a pyproject.toml to requirements.txt
+  reqs:
+    desc: "Lock dependencies declared in a pyproject.toml to requirements.txt"
+    deps: [activate]
+    cmds:
+      - cmd /c "del /q requirements.txt || exit 0"
+      - uv pip compile pyproject.toml -o requirements.txt
+
   ###############################################################################
 
   ## docker-build - builds a docker image based on the docker file
@@ -144,7 +159,7 @@ tasks:
     desc: "builds a docker image based on the docker file"
     deps: [deps]
     cmds:
-      - docker build -t $PROJECT_NAME:latest .
+      - docker build --platform linux/arm64 -t $PROJECT_NAME:latest .
 
   ###############################################################################
 
