--- a/requirements.txt
+++ b/requirements.txt
@@ -18,25 +18,29 @@ markdown-it-py==3.0.0
     # via rich
 mdurl==0.1.2
     # via markdown-it-py
-mypy==1.15.0
+mypy==1.16.0
     # via pystarter (pyproject.toml)
-mypy-extensions==1.0.0
+mypy-extensions==1.1.0
     # via mypy
 nest-asyncio==1.6.0
     # via pystarter (pyproject.toml)
-packaging==24.2
+packaging==25.0
     # via pytest
+pathspec==0.12.1
+    # via mypy
 pbr==6.1.1
     # via stevedore
-pluggy==1.5.0
+pluggy==1.6.0
     # via pytest
-pydantic==2.11.3
+pydantic==2.11.5
     # via pystarter (pyproject.toml)
-pydantic-core==2.33.1
+pydantic-core==2.33.2
     # via pydantic
 pygments==2.19.1
-    # via rich
-pytest==8.3.5
+    # via
+    #   pytest
+    #   rich
+pytest==8.4.0
     # via pystarter (pyproject.toml)
 python-dotenv==1.1.0
     # via pystarter (pyproject.toml)
@@ -44,21 +48,21 @@ pyyaml==6.0.2
     # via bandit
 rich==14.0.0
     # via bandit
-ruff==0.11.5
+ruff==0.11.13
     # via pystarter (pyproject.toml)
-setuptools==78.1.0
+setuptools==80.9.0
     # via pbr
 stevedore==5.4.1
     # via bandit
-structlog==25.2.0
+structlog==25.4.0
     # via pystarter (pyproject.toml)
-types-aiofiles==24.1.0.20250326
+types-aiofiles==24.1.0.20250606
     # via pystarter (pyproject.toml)
-typing-extensions==4.13.2
+typing-extensions==4.14.0
     # via
     #   mypy
     #   pydantic
     #   pydantic-core
     #   typing-inspection
-typing-inspection==0.4.0
+typing-inspection==0.4.1
     # via pydantic
